--- a/angular.json
+++ b/angular.json
@@ -24,8 +24,7 @@
             ],
             "styles": [
               "src/fonts.scss",
-              "src/styles.scss",
-              "../node_modules/font-awesome/css/font-awesome.css"
+              "src/styles.scss"
             ],
             "scripts": [],
             "es5BrowserSupport": true
