--- a/angular.json
+++ b/angular.json
@@ -23,10 +23,13 @@
               "src/assets"
             ],
             "styles": [
+              "../node_modules/bootstrap/scss/bootstrap.scss",
               "src/fonts.scss",
               "src/styles.scss"
             ],
-            "scripts": [],
+            "scripts": [
+              "../node_modules/bootstrap/dist/js/bootstrap.min.js"
+            ],
             "es5BrowserSupport": true
           },
           "configurations": {
