--- a/angular.json
+++ b/angular.json
@@ -23,12 +23,12 @@
               "src/assets"
             ],
             "styles": [
-              "../node_modules/bootstrap/scss/bootstrap.scss",
+              "./node_modules/bootstrap/scss/bootstrap.scss",
               "src/fonts.scss",
               "src/styles.scss"
             ],
             "scripts": [
-              "../node_modules/bootstrap/dist/js/bootstrap.min.js"
+              "./node_modules/bootstrap/dist/js/bootstrap.min.js"
             ],
             "es5BrowserSupport": true
           },
