--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~7.2.0",
     "angular-font-awesome": "^3.1.2",
     "core-js": "^2.5.4",
+    "ng2-tooltip-directive": "^2.1.9",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
